@startuml Main_ClassDiagram

skinparam linetype ortho
skinparam ranksep 80
skinparam nodesep 40
' ==================== CLASSES ====================

' Interfaces
interface ILogSink {
    +{abstract} write(msg: LogMessage&) : void
}

' Normal Class
class LogMessage {
    +appName :  string
    +context :  string
    +time :  string
    +severity :  string
    +payload :  string
}

' Template Class
class "RingBuffer<T>" as RingBuffer {
    -buffer_ :  vector< optional<T>>
    -head_ :  size_t
    -tail_ :  size_t
    -size_ :  size_t
    -capacity_ :  size_t
    +RingBuffer(capacity:  size_t)
    +isFull() : bool
    +isEmpty() : bool
    +tryPush(value: T) : bool
    +tryPop() :  optional<T>
}

' ThreadPool Class
class ThreadPool {
    -workers_ :  vector<thread>
    -tasksQueue_ :  queue<function<void>>
    -mutex_ :  mutex
    -cv_ :  condition_variable
    -stopFlag_ :  bool
    +ThreadPool(threadCount:  size_t)
    +tryEnqueueTask(task:  function<void()>) : bool

}

' Main Class
rectangle  "Builder"{
' Builder
class LogManagerBuilder {
    -sinks_ :  vector< unique_ptr<ILogSink>>
    -messages_ :  vector<LogMessage>
    -buffer_capacity_ :  size_t = 100
    -threadPoolSize_ :  size_t = 2
    +addSink(sink:  unique_ptr<ILogSink>) : LogManagerBuilder&
    +addMessage(msg: const LogMessage&) : LogManagerBuilder&
    +setBufferCapacity(capacity:  size_t) : LogManagerBuilder&
    +setThreadPoolSize(size:  size_t) : LogManagerBuilder&
    +build() :  unique_ptr<LogManager>
}
class LogManager {
    -sinks_ :  vector< shared_ptr<ILogSink>>
    -messages_ :  RingBuffer<LogMessage>
    -threadPool_ :  unique_ptr<ThreadPool>
    +LogManager(capacity:  size_t, threadPoolSize:  size_t)
    +addSink(sink:  unique_ptr<ILogSink>) : void
    +addMessage(msg: const LogMessage&) : void
    +writeToAll(msg: const LogMessage&) : void
    +flushMessages() : void
}
}

' Implementations
' Factory
rectangle "Factory "{
class LogSinkFactory {
    +{static} createSink(sinkType: LogSinkType_enum, 
    {static}sinkPath: const  string&) :  unique_ptr<ILogSink>
}
class FileSinkImpl {
    +file_ :  ofstream
    +FileSinkImpl(filePath: const  string)
    +write(msg: const LogMessage&) : void
}

class ConsoleSinkImpl {
    +write(msg: const LogMessage&) : void
}

}



' ==================== LAYOUT CONTROL ====================

' Force ILogSink above its children
ILogSink -[hidden]down- FileSinkImpl
ILogSink -[hidden]down- ConsoleSinkImpl
ILogSink -[hidden]down- LogSinkFactory

FileSinkImpl -[hidden]right- ConsoleSinkImpl


LogMessage -[hidden]left- ILogSink

LogManager -[hidden]down- ILogSink

RingBuffer -[hidden]left- LogMessage

LogSinkFactory -[hidden]down- FileSinkImpl

ThreadPool -[hidden]left- LogManager

' ==================== ACTUAL RELATIONSHIPS ====================

ILogSink <|.. FileSinkImpl 
ILogSink <|.. ConsoleSinkImpl 

LogManager o-- ILogSink 

LogManager *-- RingBuffer 
LogManager *-- ThreadPool
LogManager --> LogMessage
ILogSink --> LogMessage
RingBuffer --> LogMessage : <<T>>

LogSinkFactory ..> FileSinkImpl 
LogSinkFactory ..> ConsoleSinkImpl  

LogManagerBuilder ..> LogManager 

@enduml